grails-app/assets/stylesheets/global-styles.css
/* ... */
table thead {
	background-color: transparent;
}

table thead th, table.table thead th, table.table th.sorting, table.table th.sorting_asc, table.table th.sorting_desc, .table .slick-header, .table .slick-header-column, .table .header-column {
	border-color: #ddd;
	background-color: #d9edf7;
	border: 1px solid #ddd !important;
}

.table-bordered thead:first-child tr:first-child > th:first-child,.table-bordered tbody:first-child tr:first-child > td:first-child,.table-bordered tbody:first-child tr:first-child > th:first-child {
	border-radius: 0;
}

.table-bordered thead:first-child tr:first-child > th:last-child,.table-bordered tbody:first-child tr:first-child > td:last-child,.table-bordered tbody:first-child tr:first-child > th:last-child {
	border-radius: 0;
}

table .headerSortUp,table .headerSortDown {
	background-color: transparent;
}

.table-striped tbody > tr:nth-child(2n+1) > td,.table-striped tbody > tr:nth-child(2n+1) > th {
	background-color: #f9f9f9;
    --bs-table-bg-type: #f9f9f9;
}

.table > :not(caption) > * > * {
    padding: 0.75rem 0.75rem;
}

#reports .accordion-header {
	background: transparent;
}


.content div.pagination span,#content div.pagination span,.content div.pagination a,#content div.pagination a {
	background-image: none;
	background-color: #fff;
	border-color: #ccc;
	color: #333;
}

.content div.pagination span:hover,#content div.pagination span:hover,.content div.pagination a:hover,#content div.pagination a:hover,.content div.pagination span:focus,#content div.pagination span:focus,.content div.pagination a:focus,#content div.pagination a:focus {
	background-position: 0 0;
	color: #333;
	background-color: #e6e6e6;
	border-color: #adadad;
}

.content div.pagination span.currentStep,#content div.pagination span.currentStep,.content div.pagination a.currentStep,#content div.pagination a.currentStep {
	color: #333;
	background-color: #e6e6e6;
	border-color: #adadad;
	background-image: none;
}





.nav-tabs li a,.nav-tabs li a:hover {
	background-color: transparent;
	font-weight: 400;
}

.nav-tabs li a:hover {
	background-color: #eee;
}

.nav-tabs > .active > a,.nav-tabs > .active > a:hover,.nav-tabs > .active > a:focus {
	background-color: #fff;
}

ul#adminNav li a {
	background-color: transparent;
}

ul#adminNav li.active a {
	background-color: #eee;
}





.btn {
	color: #333;
	background-color: #fff;
	border-color: #ccc;
	background-image: none;
	background-repeat: no-repeat;
	padding: 5px 10px;
}

.content div.pagination span.currentStep:hover,#content div.pagination span.currentStep:hover,.content div.pagination a.currentStep:hover,#content div.pagination a.currentStep:hover,.content div.pagination span.currentStep:focus,#content div.pagination span.currentStep:focus,.content div.pagination a.currentStep:focus,#content div.pagination a.currentStep:focus,.content div.pagination span.currentStep:active,#content div.pagination span.currentStep:active,.content div.pagination a.currentStep:active,#content div.pagination a.currentStep:active,.content div.pagination span.currentStep.active,#content div.pagination span.currentStep.active,.content div.pagination a.currentStep.active,#content div.pagination a.currentStep.active,.content div.pagination span.currentStep.disabled,#content div.pagination span.currentStep.disabled,.content div.pagination a.currentStep.disabled,#content div.pagination a.currentStep.disabled,.content div.pagination span.currentStep[disabled],#content div.pagination span.currentStep[disabled],.content div.pagination a.currentStep[disabled],#content div.pagination a.currentStep[disabled] {
	color: #333;
	background-color: transparent;
}

.btn-inverse {
	color: #fff;
	background-color: #337ab7;
	border-color: #2e6da4;
}

.btn:hover,.btn:focus,.btn:active,.btn.active,.btn.disabled,.btn[disabled] {
	color: #333;
	background-color: #e6e6e6;
	border-color: #adadad;
}

.btn-inverse:hover,.btn-inverse:focus,.btn-inverse:active,.btn-inverse.active,.btn-inverse.disabled,.btn-inverse[disabled] {
	color: #fff;
	background-color: #286090;
	border-color: #23527c;
}

.btn-fc {
	color: #fff;
	background-color: #337ab7;
	border-color: #2e6da4;
}

.btn-fc:hover,.btn-fc:focus,.btn-fc:active,.btn-fc.active,.btn-fc.disabled,.btn-fc[disabled] {
	color: #fff;
	background-color: #286090;
	border-color: #23527c;
}

.btn-fc:active,.btn-fc.active {
	color: #fff;
	background-color: #286090;
	border-color: #23527c;
}

.btn-group.open .btn-fc.dropdown-toggle {
	background-color: #286090;
}

.navbar-inverse .btn-navbar {
	background-image: none;
	color: #fff;
	background-color: #337ab7;
	border-color: #2e6da4;
}

.navbar-inverse .btn-navbar:hover,.navbar-inverse .btn-navbar:focus,.navbar-inverse .btn-navbar:active,.navbar-inverse .btn-navbar.active,.navbar-inverse .btn-navbar.disabled,.navbar-inverse .btn-navbar[disabled] {
	color: #fff;
	background-color: #286090;
	border-color: #23527c;
}


.page-header-menu .btn-warning {
	background-color: #ec971f;
	border-color: #d58512;
	color: #fff;
}

.page-header-menu .btn-warning:hover {
	background-color: #f0ad4e;
	border-color: #eea236;
	color: #fff;
}

.btnProfile i,.btnAdministration i,.btn-login i,#logout-btn i {
	display: none;
}

#dcNav .navbar-inverse .nav-collapse .navbar-form,.navbar .btn,.navbar .btn-group {
	margin-top: 0;
}

.btn-group > .btn-login {
	font-size: 14px;
}

.btn-group > .btn-signup {
	font-size: 14px;
}


.btn-primary {
	background-color: #44b6ae;
	border-color: #44b6ae;
	color: #fff;
}

.btn-primary:hover {
	background-color: #36918b;
	border-color: #36918b;
	color: #fff;
}

.btn-primary[disabled]:hover {
	color: #333;
	background-color: #e6e6e6;
	border-color: #adadad;
}

.label-success,.bg-success, .text-bg-success {
	background-color: #006400;
    --bs-success-rgb: 0, 100, 0;
}

.btn-success {
	background-color: #26c281;
	border-color: #44b6ae;
	color: #fff;
}

.btn-success:hover {
	background-color: #158f76;
	border-color: #158f76;
	color: #fff;
}
/* ... */

